# Bomb-Synth

./: CMakeLists.txt  README.md  SPEC.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/engine/: LFOEngine.h  Sequencer.h  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h
Source/engine/envelopes/: ADSR.cpp  ADSR.h
Source/engine/filters/: CombFilter.h  FormantFilter.h  LadderFilter.cpp  LadderFilter.h  SVFFilter.cpp  SVFFilter.h
Source/engine/oscillators/: AnalogOscillator.cpp  AnalogOscillator.h  ESWBankLoader.cpp  GranularEngine.cpp  GranularEngine.h  WavetableBank.h  WavetableOscillator.cpp  WavetableOscillator.h
Source/modulation/: LFO.cpp  LFO.h  ModMatrix.cpp  ModMatrix.h
Source/presets/: PresetManager.h
Source/ui/: EnvelopeDisplay.h  FilterDisplay.h  ModulationPanel.cpp  ModulationPanel.h  SequencerPanel.cpp  SequencerPanel.h  WavetableDisplay.cpp  WavetableDisplay.h
scripts/: build.sh  finalize.sh  gen_esw_banks.py  install.sh
